vlib/v/checker/tests/const_match_range_invalid_err.vv
const end = 10

const start = 1

match 5 {
	end...start {
		println(start)
	}
	else {}
}

a := match 5 {
	end...start {
		4
	}
	else {
		3
	}
}
println(a)
